--- a/index.html
+++ b/index.html
@@ -3,6 +3,18 @@
 <head>
     <meta charset="UTF-8" />
     <title>Table Output & Processing</title>
+
+    <style>
+      table, th, td {
+        border: 1px solid black;
+        border-collapse: collapse;
+      }
+      th, td {
+        padding: 6px 12px;
+        text-align: center;
+      }
+    </style>
+    
 </head>
 <body>
     <!-- Display Table Data-->
